[package]
name = "paperbark"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
crossterm = "0.23"
itertools = "0.10.3"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
tui = "0.18"
